--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "sass": "^1.57.0",
     "typescript": "4.8.3"
   }
 }
