--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.2.9",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-aws-s3": "^1.5.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
