--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ AWS_S3_BUCKET_ACCESS_KEY=AKIA5X6IZS6QDGMHXAC5
 AWS_S3_BUCKET_SECRET_ACCESS_KEY=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
 S3_BUCKET=adarshm.com
 REGION=ap-south-1
+S3_BUCKET_URL=https://s3.ap-south-1.amazonaws.com/adarshm.com
