--- a/client/package.json
+++ b/client/package.json
@@ -40,9 +40,13 @@
     "@types/node": "18.7.20",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
     "sass": "^1.57.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.3"
   }
 }
