--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ AWS_S3_BUCKET_SECRET_ACCESS_KEY=3NBfRkLxT9aauUugnF6XxazPBZqb11vdtGgVyUs1
 S3_BUCKET=adarshm.com
 REGION=ap-south-1
 S3_BUCKET_URL=https://s3.ap-south-1.amazonaws.com/adarshm.com
+# REDIS_PORT=redis://default:rYmcEcH6CesWMJupEkNt@containers-us-west-16.railway.app:5984
