--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "redis": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
