--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "dev": "nodemon --watch src --exec \"npm run compile && node ./dist/index.js\"",
+    "dev": "nodemon --watch src --exec 'npm run compile && node ./dist/index.js'",
     "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
@@ -14,9 +14,15 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.7.0",
-    "graphql": "^16.6.0"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.2",
     "nodemon": "^2.0.22",
