--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,10 +3,12 @@
     "rootDirs": ["src"],
     "outDir": "dist",
     "lib": ["es2020"],
-    "target": "es2020",
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"]
   }
+  // "include": ["src/**/*.ts", "**/*.tsx"],
+  // "exclude": ["node_modules"]
 }
