--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "npm run build && nodemon ./dist/index.js",
+    "dev": "npm run build && nodemon --inspect ./dist/index.js",
     "start": "npm run build && node ./dist/index.js"
   },
   "keywords": [],
@@ -18,8 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "graphql": "^16.6.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
