--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@as-integrations/next": "^3.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
