middleware and actions in ui

--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@as-integrations/next": "^3.0.0",
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@graphql-tools/schema": "^10.0.2",
+    "@mantine/core": "^7.3.1",
+    "@mantine/form": "^7.3.1",
+    "@mantine/hooks": "^7.3.1",
+    "@mantine/modals": "^7.3.1",
+    "@mantine/notifications": "^7.3.1",
+    "@mantine/nprogress": "^7.3.1",
+    "@mantine/spotlight": "^7.3.1",
     "graphql": "^16.8.1",
+    "graphql-middleware": "^6.1.35",
     "graphql-tag": "^2.12.6",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
