--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mantine/notifications": "^7.3.1",
     "@mantine/nprogress": "^7.3.1",
     "@mantine/spotlight": "^7.3.1",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
     "graphql-tag": "^2.12.6",
