--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adarshm_blog_v2",
+  "name": "adarshm_blog_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.5",
-    "@as-integrations/next": "^3.0.0",
-    "@auth0/nextjs-auth0": "^3.5.0",
-    "@graphql-tools/schema": "^10.0.2",
-    "graphql": "^16.8.1",
-    "graphql-middleware": "^6.1.35",
-    "graphql-tag": "^2.12.6",
-    "mongoose": "^8.0.3",
-    "next": "14.0.4",
     "react": "^18",
-    "react-aria-components": "^1.0.1",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "next": "14.2.5"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
