--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.5",
+    "@as-integrations/next": "^3.1.0",
+    "@graphql-tools/schema": "^10.0.4",
+    "graphql": "^16.9.0",
+    "graphql-middleware": "^6.1.35",
+    "graphql-tag": "^2.12.6",
+    "mongoose": "^8.5.2",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
